--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "discord-extended",
   "version": "0.6.0",
   "description": "",
-  "main": "index.js",
+  "main": "XClient.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
