--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "license": "ISC",
   "dependencies": {
     "@sentry/node": "^7.54.0",
-    "discord.js": "^14.10.2"
+    "discord.js": "^14.10.2",
+    "mysql": "^2.18.1"
   },
   "repository": {
     "type": "git",
@@ -28,5 +29,8 @@
   },
   "bugs": {
     "url": "https://github.com/vitu0089/Discord-XTend/issues"
+  },
+  "devDependencies": {
+    "@types/mysql": "^2.15.21"
   }
 }
